istiofiles/destination-rule-recommendation_lb_policy_app.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation
spec:
  host: recommendation
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
